--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -19,7 +19,7 @@ const { title, description = "Tienda de muebles de alta calidad" } =
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content={description} />
     <title>{title} | Lalasia Furniture Store</title>
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <!-- <link rel="preconnect" href="https://stijndv.com" />
     <link rel="stylesheet" href="https://stijndv.com/fonts/Eudoxus-Sans.css" /> -->
   </head>
