--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Hero from "../components/sections/Hero.astro";
 import Benefits from "@/components/sections/Benefits.astro";
 import PopularProducts from "@/components/sections/PopularProducts.astro";
 import OurProduct from "@/components/sections/OurProduct.astro";
+import Testimonials from "@/components/sections/Testimonials.astro";
 
 // Datos de ejemplo para productos destacados
 const featuredProducts = [
@@ -109,4 +110,5 @@ const featuredProducts = [
     subtitle="Crafted by talented and high quality material"
     paragraph="Pellentesque etiam blandit in tincidunt at donec. Eget ipsum dignissim placerat nisi, adipiscing mauris non purus parturient. morbi fermentum, vivamus et accumsan dui tincidunt pulvinar. "
   />
+  <Testimonials />
 </MainLayout>
