--- a/src/components/common/TestimonialCard.astro
+++ b/src/components/common/TestimonialCard.astro
@@ -1,4 +1,7 @@
 ---
+import QuoteUp from "@/assets/icons/quote-up.svg";
+import { Image } from "astro:assets";
+
 interface Props {
   id: number;
   name: string;
@@ -11,30 +14,34 @@ interface Props {
 const { name, role, content, image, rating } = Astro.props;
 ---
 
-<div class="bg-white rounded-lg shadow-md p-6 hover:shadow-lg transition-shadow duration-300">
+<div
+  class="bg-white rounded-lg shadow-md p-6 hover:shadow-lg transition-shadow duration-300 max-w-80 h-[300px] flex flex-col"
+>
   <!-- Estrellas de calificación -->
-  <div class="flex mb-4">
-    {Array.from({ length: 5 }).map((_, index) => (
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        class={`h-5 w-5 ${index < rating ? 'text-yellow-400' : 'text-gray-300'}`}
-        viewBox="0 0 20 20"
-        fill="currentColor"
-      >
-        <path
-          d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
-        />
-      </svg>
-    ))}
+  <div class="flex mb-4 justify-between items-center">
+    <Image src={QuoteUp} alt={"quote-up"} class="w-6 h-6 object-cover" />
+    <div class="flex space-x-2">
+      {
+        Array.from({ length: 5 }).map((_, index) => (
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class={`h-5 w-5 ${index < rating ? "text-yellow-400" : "text-gray-300"}`}
+            viewBox="0 0 20 20"
+            fill="currentColor"
+          >
+            <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
+          </svg>
+        ))
+      }
+    </div>
   </div>
-
   <!-- Contenido del testimonio -->
-  <blockquote class="text-gray-600 mb-6">
+  <blockquote class="text-gray-600 mb-6 flex-grow">
     "{content}"
   </blockquote>
 
-  <!-- Información del cliente -->
-  <div class="flex items-center">
+  <!-- Información del cliente (siempre en el footer) -->
+  <div class="flex items-center mt-auto">
     <img
       src={image || "/placeholder.svg"}
       alt={name}
@@ -46,4 +53,3 @@ const { name, role, content, image, rating } = Astro.props;
     </div>
   </div>
 </div>
-
