feat: :sparkles: Agregar secciones de artículos y enlace a descuentos especiales en la página principal, ajustar estilos globales

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,8 @@ import Benefits from "@/components/sections/Benefits.astro";
 import PopularProducts from "@/components/sections/PopularProducts.astro";
 import OurProduct from "@/components/sections/OurProduct.astro";
 import Testimonials from "@/components/sections/Testimonials.astro";
+import Articles from "@/components/sections/Articles.astro";
+import DiscoutSpecialsLink from "@/components/sections/DiscoutSpecialsLink.astro";
 
 // Datos de ejemplo para productos destacados
 const featuredProducts = [
@@ -111,4 +113,6 @@ const featuredProducts = [
     paragraph="Pellentesque etiam blandit in tincidunt at donec. Eget ipsum dignissim placerat nisi, adipiscing mauris non purus parturient. morbi fermentum, vivamus et accumsan dui tincidunt pulvinar. "
   />
   <Testimonials />
+  <Articles />
+  <DiscoutSpecialsLink />
 </MainLayout>
